# WebGPU-engine

./: Cargo.toml
src/: animation.rs  camera.rs  component.rs  context.rs  entity.rs  game.rs  gui.rs  input.rs  lib.rs  main.rs  model.rs  outline.wgsl  physics.rs  post.wgsl  render_system.rs  shader.metal  shader.wgsl  sprite.rs  spritesheet.rs  state.rs  texture.rs  texture.wgsl  uniform.rs  uniform.wgsl  utils.rs  wgsl_preprocessor.rs  wireframe.wgsl
src/shaders/: compute.wgsl  hover.wgsl  light.wgsl  model_vertex.wgsl  outline.wgsl  post.wgsl  post_popup.wgsl  post_standard.wgsl  shader.wgsl  standard.wgsl  texture.wgsl  uniform.wgsl  wireframe.wgsl
src/text/: a.txt  fifth.txt  first.txt  fourth.txt  second.txt  signpost.txt  third.txt
