[package]
name = "web_gpu_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
env_logger = "0.11.5"
log = "0.4.22"
wgpu = "22.1.0"
winit = "0.30.*"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
anyhow = "1.0"
cgmath = { version = "0.18", features = ["swizzle"] }
instant = "0.1"
slotmap = "1.0.7"
egui-wgpu = "0.29.0"
egui-winit = { version = "0.29.0", default-features = false }
egui = "0.29.0"
flume = "0.11.1"
lazy_static = "1.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
tracing-wasm = "0.2"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
instant = { version = "0.1", features = [ "wasm-bindgen" ] }


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]


[lib]
crate-type = ["cdylib", "rlib"]
